# HDR

./: .gitignore  CHANGELOG.md  CLAIM_CRITERIA.md  CLAIM_MATRIX.md  CLAUDE.md  CORRECTIONS.md  EXTENDED_PROFILE_REPORT.md  FAILURES.md  README.md  RECONCILIATION_v74.md  REPRODUCIBILITY.md  REPUBLISH_NOTE.md  RESULTS_INDEX.md  STANDARD_PROFILE_REPORT.md  VALIDATION_FAILURES.md  VALIDATION_PLAN.md  __init__ (2).py  __init__ (4).py  __init__ (5).py  __init__.py  alpha.json  analyse_highpower.py  analyse_mismatch.py  audit_report.json  baselines.py  challenges.py  chance_calibration.json  check_claims.py  checkpointing.py  cluster_bootstrap_runner.py  common.py  config (1).json  config (15).json  config (2).json  config (25).json  config (29).json  config (33).json  config (50).json  config (58).json  config.json  (+131 more)
archive/: README.md
control/: lqr.py  mpc.py
hdr_validation/: __init__.py  defaults.py  provenance.py  specification.py  utils.py
inference/: imm.py
model/: coherence.py  hsmm.py  recovery.py  slds.py  target_set.py
reports/: all_results.csv  extended_results.json  smoke_results.json  standard_results.json  summary.md  validation_results.json
results/: benchmark_a_status.md  environment_report.json  episode_001 (5).npz  episode_001.npz  episode_002.npz  log (30).txt  log (34).txt  log.txt  manifest.csv  metrics (31).csv  metrics (56).csv  metrics (64).csv  pytest_results.txt  seed (33).json  seed (54).json  selected_traces (10).npz  selected_traces (4).npz  selected_traces (45).npz  stage_15_observability_diagnostic.json  stage_summary (1).json  (+4 more)
(+218 files in other folders)
