[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdr_validation"
version = "7.4.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev  = ["pytest>=7.4", "pandas>=1.5"]

[tool.setuptools.packages.find]
include = ["hdr_validation*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
